# mechabrain

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
dashboard/: README.md
dashboard/System/Scripts/Componentes/: dc-backgroundPicker.jsx  dc-calendarPicker.jsx  dc-colorPicker.jsx  dc-exercisePicker.jsx  dc-gloBadge.jsx  dc-gloBar.jsx  dc-gloButton.jsx  dc-gloCard.jsx  dc-gloDial.jsx  dc-gloGraph.jsx  dc-gloGraph3d.jsx  dc-gloInput.jsx  dc-gloSelect.jsx  dc-gloStat.jsx  dc-gloTabs.jsx  dc-gloToggle.jsx  dc-gradientBuilder.jsx  dc-stickyPreview.jsx  dc-themePreviewContent.jsx
dashboard/System/Scripts/Core/: dc-dateContext.jsx  dc-gradientUtils.jsx  dc-themeProvider.jsx
dashboard/System/Scripts/Widgets/: dc-mechabrainDashboard.jsx  (+1 more)
docs/: SETUP.md  SPEC.md
src/mechabrain/: __init__.py  __main__.py  access.py  actions.py  check.py  cli.py  consolidate.py  contract.py  discovery.py  errors.py  gate.py  generate.py  graph.py  locking.py  manifest.py  mcp_server.py  note.py  search.py  writer.py
src/mechabrain/index/: __init__.py  chunk.py  embed.py  indexer.py  lexical.py  store.py
src/mechabrain/templates/: agents.md.tmpl  config.yaml.tmpl  hot.md.tmpl  index.md.tmpl  index_shard.md.tmpl  mecha-scribe-skill.md  schema.md.tmpl
tests/: conftest.py  test_access.py  test_actions.py  test_check.py  test_chunk.py  test_cli.py  test_consolidate.py  test_discovery.py  test_embed.py  test_gate.py  test_generate.py  test_graph.py  test_indexer.py  test_lexical.py  test_locking.py  test_manifest.py  test_mcp_server.py  test_note.py  test_search.py  test_store.py  test_writer.py
