[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechabrain"
version = "0.2.6"
description = "Drop-in agentic memory kernel for Markdown vaults (CoALA-based)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Davi Bezerra Barros" }]
keywords = ["memory", "agents", "mcp", "markdown", "rag", "coala"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
    "mcp>=1.0",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=3.0"]
lancedb = ["lancedb>=0.13"]
sqlite-vec = ["sqlite-vec>=0.1.6"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
all = [
    "mechabrain[embed]",
    "mechabrain[lancedb]",
    "mechabrain[sqlite-vec]",
]

[project.scripts]
mechabrain = "mechabrain.cli:main"

[project.urls]
Homepage = "https://github.com/dbezerrabarros/mechabrain"
Source = "https://github.com/dbezerrabarros/mechabrain"

[tool.hatch.build.targets.wheel]
packages = ["src/mechabrain"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:mechabrain.*"]
